// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common hook syncrns. hook 1`] = `
[
  [
    null,
  ],
  [
    5,
  ],
]
`;

exports[`common hook uses same instance of the hook 1`] = `
<div>
  <div
    class="comp1"
  >
    1
  </div>
   
  <div
    class="comp2"
  >
    1
  </div>
</div>
`;

exports[`common hook uses same instance of the hook 2`] = `
<div>
  <div
    class="comp1"
  >
    2
  </div>
   
  <div
    class="comp2"
  >
    2
  </div>
</div>
`;

exports[`common hook uses same instance of the hook 3`] = `
<div>
  <div
    class="comp1"
  >
    2
  </div>
</div>
`;

exports[`common hook uses same instance of the hook 4`] = `
<div>
  <div
    class="comp2"
  >
    2
  </div>
   
  <div
    class="comp1"
  >
    2
  </div>
</div>
`;

exports[`common hook uses same instance of the hook 5`] = `
<div>
  <div />
</div>
`;

exports[`common hook uses same instance of the hook 6`] = `
<div>
  <div
    class="comp1"
  >
    4
  </div>
</div>
`;

exports[`common hook uses same instance of the hook 7`] = `
<div>
  <div
    class="comp1"
  >
    5
  </div>
</div>
`;
